# watify

./: BUILD.md  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  release-please-config.json
.github/workflows/: build.yml  lint-test-clippy.yaml  npm-publish.yml  publish-npm-manual.yml  publish-npm.yml  release-please-pr.yml  release-please-release.yml  release-please.yml  test.yml
pkg/: README.md  package.json  watify.d.ts  watify.js  watify_bg.wasm  watify_bg.wasm.d.ts
src/: lib.rs
tools/: Cargo.toml
tools/src/: lib.rs
