[package]
name = "@mdn/watify"
version = "1.1.2"
license = "MPL-2.0"
description = "Compile WAT to WASM with WASM 🙇"
authors = [
  "Florian Dieminger <me@fiji-flo.de>",
  "The MDN Engineering Team <mdn-dev@mozilla.com>",
]
edition = "2021"
resolver = "2"
homepage = "https://github.com/mdn/watify"
repository = "git+https://github.com/mdn/watify.git"
rust-version = "1.81"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wat = "1"
wasm-bindgen = "0.2"
