[package]
name = "watify"
version = "1.1.5"
license = "MPL-2.0"
description = "Compile WAT to WASM with WASM 🙇"
authors = ["MDN Engineering Team <mdn-dev@mozilla.com>"]
edition = "2021"
resolver = "2"
homepage = "https://github.com/mdn/watify"
repository = "git+https://github.com/mdn/watify.git"
rust-version = "1.90"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wat = "1"
wasm-bindgen = "0.2"
